--- a/src/main/resources/fxml/dependent.fxml
+++ b/src/main/resources/fxml/dependent.fxml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuItem?>
 <VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cosc2440assessment2.controller.DependentController">
     <fx:include source="menubar.fxml"/>
+    <VBox alignment="CENTER">
+        <Label style="-fx-font-weight: bold;" alignment="CENTER">My Claims</Label>
+        <ListView maxWidth="500" fx:id="myclaims"/>
+    </VBox>
 
-    <Label alignment="CENTER">My Claims</Label>
-    <ListView fx:id="myclaims"/>
 </VBox>
