--- a/src/main/resources/fxml/policy_holder.fxml
+++ b/src/main/resources/fxml/policy_holder.fxml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ListView?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cosc2440assessment2.controller.PolicyHolderController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-    <Label fx:id="role"/>
-    <Button onAction="#logout">Logout</Button>
+    <fx:include source="menubar.fxml"/>
 
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">My Claims</Label>
+    <ListView maxWidth="500" fx:id="myclaims"/>
+    <Button onAction="#addClaim">Add Claim</Button>
+
+    <Separator maxWidth="Infinity"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">My Dependents</Label>
+    <ListView maxWidth="500" fx:id="mydependents"/>
+
+    <Separator maxWidth="Infinity"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">My Dependents Claims</Label>
+    <ListView maxWidth="500" fx:id="mydependentsclaims"/>
+    <Button onAction="#addDependentClaim">Add Dependent Claim</Button>
 </VBox>
