--- a/src/main/resources/fxml/policy_owner.fxml
+++ b/src/main/resources/fxml/policy_owner.fxml
@@ -4,11 +4,25 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cosc2440assessment2.controller.PolicyOwnerController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-    <Label fx:id="role"></Label>
-    <Button onAction="#logout">Logout</Button>
+    <fx:include source="menubar.fxml"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">My Claims</Label>
+    <ListView maxWidth="500" fx:id="myclaims"/>
+    <Button onAction="#addClaim">Add Claim</Button>
+
+    <Separator maxWidth="Infinity"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">My Beneficiaries</Label>
+    <ListView maxWidth="500" fx:id="mybeneficiaries"/>
+    <Button onAction="#addBeneficiary">Add Beneficiary</Button>
+
+    <Separator maxWidth="Infinity"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">My Beneficiaries Claims</Label>
+    <ListView maxWidth="500" fx:id="mybeneficiariesclaims"/>
+    <Button onAction="#addBeneficiaryClaim">Add Dependent Claim</Button>
 </VBox>
