--- a/src/main/resources/fxml/assurance_manager.fxml
+++ b/src/main/resources/fxml/assurance_manager.fxml
@@ -4,12 +4,28 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cosc2440assessment2.controller.AssuranceManagerController">
+    <fx:include source="menubar.fxml"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">Claims</Label>
+    <Button onAction="#claimFilter">Filter</Button>
+    <ListView maxWidth="500" fx:id="claims"/>
+
+    <Separator maxWidth="Infinity"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">My Surveyors</Label>
+    <ListView maxWidth="500" fx:id="surveyors"/>
+
+    <Separator maxWidth="Infinity"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">Users</Label>
+    <Button onAction="#userFilter">Filter</Button>
+    <ListView maxWidth="500" fx:id="users"/>
+
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-    <Label fx:id="role"/>
-    <Button onAction="#logout">Logout</Button>
-
 </VBox>
