--- a/src/main/resources/fxml/dependent.fxml
+++ b/src/main/resources/fxml/dependent.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.geometry.Insets?>
 <VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cosc2440assessment2.controller.DependentController">
     <fx:include source="menubar.fxml"/>
@@ -10,5 +11,9 @@
         <Label style="-fx-font-weight: bold;" alignment="CENTER">My Claims</Label>
         <ListView maxWidth="500" fx:id="myclaims"/>
     </VBox>
+
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+    </padding>
 
 </VBox>
