--- a/src/main/resources/fxml/policy_owner.fxml
+++ b/src/main/resources/fxml/policy_owner.fxml
@@ -25,4 +25,13 @@
     <Label style="-fx-font-weight: bold;" alignment="CENTER">My Beneficiaries Claims</Label>
     <ListView maxWidth="500" fx:id="mybeneficiariesclaims"/>
     <Button onAction="#addBeneficiaryClaim">Add Dependent Claim</Button>
+
+    <Separator maxWidth="Infinity"/>
+
+    <Label fx:id="yearlyCost">Yearly Cost</Label>
+    <Button onAction="#calculateYearlyCost">Calculate</Button>
+
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+    </padding>
 </VBox>
