--- a/src/main/resources/fxml/assurance_surveyor.fxml
+++ b/src/main/resources/fxml/assurance_surveyor.fxml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Separator?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cosc2440assessment2.controller.AssuranceSurveyorController">
     <fx:include source="menubar.fxml"/>
