--- a/src/main/resources/fxml/menubar.fxml
+++ b/src/main/resources/fxml/menubar.fxml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.HBox?>
 <HBox fx:id="hbox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.example.cosc2440assessment2.controller.MenuController">
