--- a/src/main/resources/fxml/dependent.fxml
+++ b/src/main/resources/fxml/dependent.fxml
@@ -9,6 +9,7 @@
     <fx:include source="menubar.fxml"/>
     <VBox alignment="CENTER">
         <Label style="-fx-font-weight: bold;" alignment="CENTER">My Claims</Label>
+        <Label alignment="TOP_LEFT">Date - Insured - Amount - Exam Date - State</Label>
         <ListView maxWidth="500" fx:id="myclaims"/>
     </VBox>
 
