--- a/src/main/resources/fxml/policy_holder.fxml
+++ b/src/main/resources/fxml/policy_holder.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cosc2440assessment2.controller.PolicyHolderController">
     <fx:include source="menubar.fxml"/>
@@ -16,12 +17,15 @@
 
     <Label style="-fx-font-weight: bold;" alignment="CENTER">My Dependents</Label>
     <ListView maxWidth="500" fx:id="mydependents"/>
+    <HBox alignment="CENTER">
+        <Button fx:id="addDependentClaim" onAction="#addDependentClaim">Add Dependent Claim</Button>
+        <Button fx:id="updateDependentInfo" onAction="#updateDependentInfo">Update Dependent Info</Button>
+    </HBox>
 
     <Separator maxWidth="Infinity"/>
 
     <Label style="-fx-font-weight: bold;" alignment="CENTER">My Dependents Claims</Label>
     <ListView maxWidth="500" fx:id="mydependentsclaims"/>
-    <Button onAction="#addDependentClaim">Add Dependent Claim</Button>
 
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
