--- a/src/main/resources/fxml/policy_owner.fxml
+++ b/src/main/resources/fxml/policy_owner.fxml
@@ -3,11 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cosc2440assessment2.controller.PolicyOwnerController">
     <fx:include source="menubar.fxml"/>
 
     <Label style="-fx-font-weight: bold;" alignment="CENTER">My Claims</Label>
+    <Label alignment="TOP_LEFT">Date - Amount - Exam Date - State</Label>
     <ListView maxWidth="500" fx:id="myclaims"/>
     <Button onAction="#addClaim">Add Claim</Button>
 
@@ -15,13 +17,17 @@
 
     <Label style="-fx-font-weight: bold;" alignment="CENTER">My Beneficiaries</Label>
     <ListView maxWidth="500" fx:id="mybeneficiaries"/>
+    <HBox alignment="CENTER">
+        <Button fx:id="addBeneficiaryClaim" onAction="#addBeneficiaryClaim">Add Beneficiary Claim</Button>
+        <Button fx:id="updateBeneficiaryInfo" onAction="#updateBeneficiaryInfo">Update Beneficiary Info</Button>
+    </HBox>
     <Button onAction="#addBeneficiary">Add Beneficiary</Button>
 
     <Separator maxWidth="Infinity"/>
 
     <Label style="-fx-font-weight: bold;" alignment="CENTER">My Beneficiaries Claims</Label>
+    <Label alignment="TOP_LEFT">Date - Beneficiary - Amount - Exam Date - State</Label>
     <ListView maxWidth="500" fx:id="mybeneficiariesclaims"/>
-    <Button onAction="#addBeneficiaryClaim">Add Dependent Claim</Button>
 
     <Separator maxWidth="Infinity"/>
 
