--- a/src/main/resources/fxml/assurance_surveyor.fxml
+++ b/src/main/resources/fxml/assurance_surveyor.fxml
@@ -8,14 +8,15 @@
     <fx:include source="menubar.fxml"/>
 
     <Label style="-fx-font-weight: bold;" alignment="CENTER">Claims</Label>
-    <Button onAction="#claimFilter">Filter</Button>
+    <Label alignment="TOP_LEFT">Date - Customer - Amount - Exam Date - State</Label>
     <ListView maxWidth="500" fx:id="claims"/>
+    <Button onAction="#claimFilter">Filter</Button>
 
     <Separator maxWidth="Infinity"/>
 
     <Label style="-fx-font-weight: bold;" alignment="CENTER">Users</Label>
-    <Button onAction="#userFilter">Filter</Button>
     <ListView maxWidth="500" fx:id="users"/>
+    <Button onAction="#userFilter">Filter</Button>
 
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
