--- a/src/main/resources/fxml/admin.fxml
+++ b/src/main/resources/fxml/admin.fxml
@@ -4,13 +4,27 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cosc2440assessment2.controller.AdminController">
+
+    <fx:include source="menubar.fxml"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">Claims</Label>
+    <Label alignment="TOP_LEFT">Date - Customer - Amount - Exam Date - State</Label>
+    <ListView maxWidth="500" fx:id="claims"/>
+    <Button onAction="#claimFilter">Filter</Button>
+
+    <Separator maxWidth="Infinity"/>
+
+    <Label style="-fx-font-weight: bold;" alignment="CENTER">Users</Label>
+    <ListView maxWidth="500" fx:id="users"/>
+    <Button onAction="#userFilter">Filter</Button>
+    <Button onAction="#addUser">Add User</Button>
+
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-
-    <Label fx:id="role"/>
-    <Button onAction="#logout">Logout</Button>
 
 </VBox>
